# EmeraldGreen

./: .gitattributes  .gitignore  .gitmodules  0.json  CMakeLists.txt  Menu.json  consts.h  globals.cpp  globals.h  main.cpp  test.json  test1.json
app/: globals.cpp  globals.h
app/auxiliar/: editor.cpp  editor.h  persistence.cpp  persistence.h  style.h  window.cpp
app/callbacks/: ui.cpp  ui.h  update.cpp  update.h
app/graph/: graph.cpp  graph.h  link.h  node.h
app/stateMachine/: stateMachine.cpp  stateMachine.h
auxiliar/: editor.cpp  style.h  window.cpp  window.h
graph/: graph.cpp  graph.h  link.h  node.h
shaders/: basic.frag  basic.vert  basicFrag.spv  basicVert.spv  compile.bat  compile.sh
stateMachine/: stateMachine.cpp  stateMachine.h
